kubes/website/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bins-website
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: bins-website
  template:
    metadata:
      labels:
        app: bins-website
    spec:
      containers:
      - image: git.home.fa.gl/josh/bins-website:latest
        name: bins-website
        ports:
        - containerPort: 80
