kubes/website/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: bins-website
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: bins-website
